fix: mobile header modals z-index

--- a/src/features/search/components/search-modal/search-modal.module.scss
+++ b/src/features/search/components/search-modal/search-modal.module.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 50;
+  z-index: 101;
   background-color: rgba($black, 0.96);
   overflow-y: auto;
 
